- added folder parameter to tin.lua plugin
- fixed aggregator plugin to respect RSS 2.0 specifications
- added args parser
- added freepops-doc debian package
- fixed last cygwin issue
- fixed gmail TOP
- fixed cygwin build target (partially)
- porting freepops to OpenBSD
- added cvs_acl to allow contributors commit
- fixed bug in browser.lua (u could be nil but indexed)
- added b:ssl_init_stuff() and b:verbose_mode()
- complete fix to browser.lua that now supports rotten cookies (thanks Eddi)
09/07/2004 0.0.12 fix release
- added link tag support to aggregator plugin
- added spam/AV tutorial to the manual
- added some gmail fixes
- added LAN tutorial to the manual
- added some extra checks to browser's mangle location
08/07/2004 0.0.11 feature/fix release (never released officially)
- added base tutorials to manual
- added pubDate tag support to aggregator plugin
- added gmail.lua to manual + various fixes
- added man page to manual
- added FAQ to manual
- fixed man page
- fixed old bug in popstate.c in wrong index check in array acess
- fixed bug introduced in fixing the fix for popserver rfc compliace
- added kerneltrap.org and linux.kerneltrap.org aggregator domains
- fixed aggregator.lua and flatnuke.lua 
- added reject/accept policy section in config.lua
- added # chkconfig to rpm rc file (thanks domfe)
- fixed bug introduced in fixing popserver rfc compliace
- added plugin tutorial to the manual
- fixed bug in aggregator.lua
- fixed bug in mimer (thanks nickshw for bugreporting)
- regularexp lua bindings added
- workaround for the tin TOP. (not fixed, probable bug in stringhack.tophack)
- fixed popserver rfc compliace issue (stat/list/uidl doesn't show messages
marked for deletion) thanks ramik for bugreporting
- fixed bug in browser.lua
- fixed tin.lua issue
28/06/2004 0.0.10 fix release
- added freepops.need_sll() that asserts SSL is present 
(call it after loading browser in the init function of the plugin)